--- a/src/app/search-criteria/search-criteria.component.html
+++ b/src/app/search-criteria/search-criteria.component.html
@@ -1,31 +1,33 @@
 <main>
   <h1>Recipe Search</h1>
   <form #searchForm="ngForm" (ngSubmit)="getData(searchForm)">
+
     <label for="health"> Health Restrictions </label>
-    <input
-      type="text"
-      id="health"
-      name="health"
-      placeholder="enter health restrictions"
-      ngModel
-    />
+    <select name="health" id="health" ngModel>
+      <option value="">Choose one</option>
+      <option value="dairy-free">Dairy Free</option>
+      <option value="fish-free">Fish Free</option>
+      <option value="gluten-free">Gluten Free</option>
+      <option value="keto-friendly">Keto Diet</option>
+      <option value="peanut-free">Peanut Free</option>
+      <option value="vegan">Vegan Diet</option>
+    </select>
+
     <label for="search"> Search </label>
-    <input
-      type="text"
-      id="search"
-      name="search"
-      placeholder="Search food idea"
-      ngModel
-    />
+    <input type="text" id="search" name="search" placeholder="Search food idea" ngModel />
+
     <label for="calories"> Calories </label>
-    <input
-      type="text"
-      id="calories"
-      name="calories"
-      placeholder="calories"
-      ngModel
-    />
+    <select name="calories" id="calories" ngModel>
+      <option value="">Choose calorie amount</option>
+      <option value="50-100">100-1000</option>
+      <option value="101-500">100-2000</option>
+      <option value="501-1000">100-3000</option>
+      <option value="1001-2000">100-4000</option>
+      <option value="2001-3000">100-5000</option>
+
+    </select>
     <button class="search-recipe">Submit</button>
+
   </form>
-  <app-recipe-list></app-recipe-list>
+  <app-recipe-list [recipeList]="recipes"></app-recipe-list>
 </main>
