--- a/src/app/favorites-list/favorites-list.component.html
+++ b/src/app/favorites-list/favorites-list.component.html
@@ -1,11 +1,10 @@
 <ul>
   <li *ngFor="let favorite of favorites; index as i">
-    <a [attr.href]="favorite.recipe.url" target="_blank"
-      >{{ favorite.recipe.label }}
+    <a [attr.href]="favorite.recipe.url" target="_blank">{{ favorite.recipe.label }}
     </a>
     <h3>Ingredients:</h3>
     <p>{{ favorite.recipe.ingredientLines }}</p>
-    <button class="delete" (click)="deleteFavorite(i)">x</button>
+    <button class="delete" (click)="deleteFavorite(i)" class="fas fa-heart-broken"></button>
   </li>
 </ul>
 <p *ngIf="favorites.length === 0">No Results Found</p>
