--- a/src/app/favorites-list/favorites-list.component.css
+++ b/src/app/favorites-list/favorites-list.component.css
@@ -11,7 +11,7 @@ a {
 
 li {
   border: 1px solid black;
-  margin: 5px;
+  margin: 15px;
   padding: 5px;
   max-width: 300px;
   height: 100%;
@@ -27,6 +27,7 @@ li {
   border-radius: 10px;
   text-align: center;
 }
+
 h3 {
   margin-top: 3px;
   margin-bottom: 0px;
@@ -37,11 +38,18 @@ p {
   justify-content: center;
   margin-top: 0px;
 }
+
 button {
   position: absolute;
   border-radius: 50%;
-  bottom: -10px;
-  right: -5px;
-  padding: 5px;
+  bottom: -31px;
+  right: -16px;
+  padding: 10px;
   border: solid black 1px;
+
+}
+
+.fa-heart-broken {
+  color: red;
+  font-size: 30px;
 }
