--- a/src/app/recipe-list/recipe-list.component.css
+++ b/src/app/recipe-list/recipe-list.component.css
@@ -2,6 +2,9 @@ ul {
   display: flex;
   overflow-x: scroll;
   width: 100%;
+  height: 150px;
+  overflow-y: hidden;
+  overflow-x: hidden;
 }
 
 a {
@@ -10,7 +13,7 @@ a {
 
 li {
   border: 1px solid black;
-  margin: 5px;
+  margin: 10px;
   padding: 5px;
   max-width: 100px;
   width: 100%;
@@ -19,6 +22,13 @@ li {
   text-decoration: none;
   list-style: none;
   position: relative;
+  border-radius: 10px;
+  background-color: white;
+}
+
+a {
+  background-color: white;
+  text-decoration: none;
 }
 
 button {
@@ -28,4 +38,5 @@ button {
   right: -5px;
   padding: 5px;
   border: solid black 1px;
+  background-color: white;
 }
