--- a/src/app/search-criteria/search-criteria.component.css
+++ b/src/app/search-criteria/search-criteria.component.css
@@ -1,6 +1,7 @@
 h1 {
   display: flex;
   justify-content: center;
+  font-weight: 900;
 }
 
 main {
@@ -19,8 +20,36 @@ form {
   height: 30vh;
   padding: 40px;
   border-radius: 10px;
+  background-color: white;
+  -webkit-box-shadow: 6px 2px 13px 0px rgba(0, 0, 0, 0.53);
+  -moz-box-shadow: 6px 2px 13px 0px rgba(0, 0, 0, 0.53);
+  box-shadow: 6px 2px 13px 0px rgba(0, 0, 0, 0.53);
+}
+
+label {
+  background-color: white;
+}
+
+select {
+  margin-bottom: 10px;
+  padding: 5px;
+  background-color: white;
 }
 
 input {
   margin-bottom: 10px;
+  padding: 5px;
+  background-color: white;
+}
+
+a {
+  padding: 10px;
+}
+
+button {
+  border-radius: 10px;
+  padding: 10px;
+  border: none;
+  background-color: #405d27;
+  color: white;
 }
