--- a/src/app/recipe-details/recipe-details.component.html
+++ b/src/app/recipe-details/recipe-details.component.html
@@ -1,1 +1,5 @@
-<p>recipe-details works!</p>
+<div class="detailscard">
+  <h1>Ingredients</h1>
+  <p>{{ selectedRecipe.recipe.ingredientLines }}</p>
+  <button >back to favorite</button>
+</div>
