--- a/src/app/favorites-list/favorites-list.component.html
+++ b/src/app/favorites-list/favorites-list.component.html
@@ -1,9 +1,8 @@
 <ul>
-  <li *ngFor="let favorite of favorites; index as i">
+  <li class="card" *ngFor="let favorite of favorites; index as i">
     <a [attr.href]="favorite.recipe.url" target="_blank">{{ favorite.recipe.label }}
     </a>
-    <h3>Ingredients:</h3>
-    <p>{{ favorite.recipe.ingredientLines }}</p>
+    <img src="{{ favorite.recipe.image }}">
     <button class="delete" (click)="deleteFavorite(i)" class="fas fa-heart-broken"></button>
   </li>
 </ul>
