--- a/src/app/recipe-details/recipe-details.component.html
+++ b/src/app/recipe-details/recipe-details.component.html
@@ -1,5 +1,6 @@
 <div class="detailscard">
   <h1>Ingredients</h1>
   <p>{{ selectedRecipe.recipe.ingredientLines }}</p>
-  <button >back to favorite</button>
+  <button routerLink="/favorites">back to favorites</button>
+  <button routerLink="/search">New Search</button>
 </div>
