--- a/src/app/search-criteria/search-criteria.component.css
+++ b/src/app/search-criteria/search-criteria.component.css
@@ -53,3 +53,10 @@ button {
   background-color: #405d27;
   color: white;
 }
+
+a {
+  display: flex;
+  justify-content: center;
+  text-decoration: none;
+  color: gray;
+}
