--- a/src/app/search-criteria/search-criteria.component.html
+++ b/src/app/search-criteria/search-criteria.component.html
@@ -1,7 +1,6 @@
 <main>
   <h1>Recipe Search</h1>
   <form #searchForm="ngForm" (ngSubmit)="getData(searchForm)">
-
     <label for="health"> Health Restrictions </label>
     <select name="health" id="health" ngModel>
       <option value="">Choose one</option>
@@ -14,7 +13,13 @@
     </select>
 
     <label for="search"> Search </label>
-    <input type="text" id="search" name="search" placeholder="Search food idea" ngModel />
+    <input
+      type="text"
+      id="search"
+      name="search"
+      placeholder="Search food idea"
+      ngModel
+    />
 
     <label for="calories"> Calories </label>
     <select name="calories" id="calories" ngModel>
@@ -24,10 +29,9 @@
       <option value="501-1000">100-3000</option>
       <option value="1001-2000">100-4000</option>
       <option value="2001-3000">100-5000</option>
-
     </select>
     <button class="search-recipe">Submit</button>
-
+    <a routerLink="/favorites"> Favorites</a>
   </form>
   <app-recipe-list [recipeList]="recipes"></app-recipe-list>
 </main>
