--- a/src/app/favorites-list/favorites-list.component.html
+++ b/src/app/favorites-list/favorites-list.component.html
@@ -1,11 +1,19 @@
 <ul>
   <li class="card" *ngFor="let favorite of favorites; index as i">
-    <a [attr.href]="favorite.recipe.url" target="_blank">{{ favorite.recipe.label }}
+    <a [attr.href]="favorite.recipe.url" target="_blank"
+      >{{ favorite.recipe.label }}
     </a>
-    <img src="{{ favorite.recipe.image }}">
-    <button class="delete" (click)="deleteFavorite(i)" class="fas fa-heart-broken"></button>
-    <button class="details" routerLink="/details">go to details</button>
+    <img src="{{ favorite.recipe.image }}" />
+    <button
+      class="delete"
+      (click)="deleteFavorite(i)"
+      class="fas fa-heart-broken"
+    ></button>
+    <button class="details" (click)="seeDetails(favorite)">
+      go to details
+    </button>
   </li>
 </ul>
+<button class="new-search" routerLink="/search">New Search</button>
 
 <p *ngIf="favorites.length === 0">No Results Found</p>
