--- a/src/app/recipe-list/recipe-list.component.html
+++ b/src/app/recipe-list/recipe-list.component.html
@@ -1,8 +1,8 @@
-<a routerLink="/favorites"> Favorites</a>
 <ul>
   <li *ngFor="let recipe of recipeList">
-    <a [attr.href]="recipe.recipe.url" target="_blank">{{ recipe.recipe.label }}
+    <a [attr.href]="recipe.recipe.url" target="_blank"
+      >{{ recipe.recipe.label }}
     </a>
-    <button (click)="addToFavorites(recipe)" >f</button>
+    <button (click)="addToFavorites(recipe)" class="fas fa-heart"></button>
   </li>
 </ul>
