--- a/src/app/recipe-list/recipe-list.component.css
+++ b/src/app/recipe-list/recipe-list.component.css
@@ -12,7 +12,7 @@ a {
 }
 
 li {
-  border: 1px solid black;
+  border: 1px solid #405d27;
   margin: 10px;
   padding: 5px;
   max-width: 100px;
@@ -24,6 +24,9 @@ li {
   position: relative;
   border-radius: 10px;
   background-color: white;
+  -webkit-box-shadow: 6px 2px 13px 0px rgba(0, 0, 0, 0.53);
+  -moz-box-shadow: 6px 2px 13px 0px rgba(0, 0, 0, 0.53);
+  box-shadow: 6px 2px 13px 0px rgba(0, 0, 0, 0.53);
 }
 
 a {
@@ -39,6 +42,11 @@ button {
   padding: 5px;
   border: solid black 1px;
   background-color: white;
+}
+
+button:active {
+  box-shadow: 0 3px #666;
+  transform: translateY(3px);
 }
 
 .fa-heart {
