--- a/src/app/search-criteria/search-criteria.component.html
+++ b/src/app/search-criteria/search-criteria.component.html
@@ -34,4 +34,7 @@
     <a routerLink="/favorites"> Favorites</a>
   </form>
   <app-recipe-list [recipeList]="recipes"></app-recipe-list>
+  <footer>
+    <button class="favorites" routerLink="/favorites">favorites</button>
+  </footer>
 </main>
