--- a/src/app/recipe-list/recipe-list.component.css
+++ b/src/app/recipe-list/recipe-list.component.css
@@ -5,6 +5,8 @@ ul {
   height: 150px;
   overflow-y: hidden;
   overflow-x: hidden;
+  padding: 0;
+  margin-top: 40px;
 }
 
 a {
@@ -32,6 +34,7 @@ li {
 a {
   background-color: white;
   text-decoration: none;
+  color: black;
 }
 
 button {
@@ -47,6 +50,10 @@ button {
 button:active {
   box-shadow: 0 3px #666;
   transform: translateY(3px);
+}
+
+button:hover {
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
 .fa-heart {
