--- a/src/app/favorites-list/favorites-list.component.html
+++ b/src/app/favorites-list/favorites-list.component.html
@@ -1,14 +1,9 @@
 <ul>
   <li class="card" *ngFor="let favorite of favorites; index as i">
-    <a [attr.href]="favorite.recipe.url" target="_blank"
-      >{{ favorite.recipe.label }}
+    <a [attr.href]="favorite.recipe.url" target="_blank">{{ favorite.recipe.label }}
     </a>
     <img src="{{ favorite.recipe.image }}" />
-    <button
-      class="delete"
-      (click)="deleteFavorite(i)"
-      class="fas fa-heart-broken"
-    ></button>
+    <button class="delete" (click)="deleteFavorite(i)" class="fas fa-heart-broken"></button>
     <button class="details" (click)="seeDetails(favorite)">
       go to details
     </button>
