--- a/src/app/recipe-details/recipe-details.component.html
+++ b/src/app/recipe-details/recipe-details.component.html
@@ -1,8 +1,12 @@
 <div class="detailscard">
-  {{ selectedRecipe.recipe.label }}
-
-  <h1>Ingredients</h1>
+  <h1>{{ selectedRecipe.recipe.label }}</h1>
+  <div class="image-container">
+    <img src="{{ selectedRecipe.recipe.image }}" />
+  </div>
+  <h2>Ingredients:</h2>
   <p>{{ selectedRecipe.recipe.ingredientLines }}</p>
+  <h3>Health Labels:</h3>
+  <p>{{ selectedRecipe.recipe.healthLabels }}</p>
 </div>
 
 <button routerLink="/favorites">Back to Favorites</button>
