--- a/src/app/recipe-list/recipe-list.component.css
+++ b/src/app/recipe-list/recipe-list.component.css
@@ -1,61 +1,72 @@
 ul {
   display: flex;
-  overflow-x: scroll;
-  width: 100%;
+  overflow: auto;
   height: 150px;
-  overflow-y: hidden;
-  overflow-x: hidden;
+
   padding: 0;
   margin-top: 40px;
 }
 
-a {
-  text-decoration: none;
-}
+@media screen and (min-width: 480px) {
+  ul {
+    display: flex;
+    overflow-x: scroll;
+    width: 100%;
+    height: 150px;
+    overflow-y: hidden;
+    overflow-x: hidden;
+    padding: 0;
+    margin-top: 40px;
+  }
 
-li {
-  border: 1px solid #405d27;
-  margin: 10px;
-  padding: 5px;
-  max-width: 100px;
-  width: 100%;
-  flex: 1;
-  display: flex;
-  text-decoration: none;
-  list-style: none;
-  position: relative;
-  border-radius: 10px;
-  background-color: white;
-  -webkit-box-shadow: 6px 2px 13px 0px rgba(0, 0, 0, 0.53);
-  -moz-box-shadow: 6px 2px 13px 0px rgba(0, 0, 0, 0.53);
-  box-shadow: 6px 2px 13px 0px rgba(0, 0, 0, 0.53);
-}
+  a {
+    text-decoration: none;
+  }
 
-a {
-  background-color: white;
-  text-decoration: none;
-  color: black;
-}
+  li {
+    border: 1px solid #405d27;
+    margin: 10px;
+    padding: 5px;
+    max-width: 100px;
+    width: 100%;
+    flex: 1;
+    display: flex;
+    text-decoration: none;
+    list-style: none;
+    position: relative;
+    border-radius: 10px;
+    background-color: white;
+    -webkit-box-shadow: 6px 2px 13px 0px rgba(0, 0, 0, 0.53);
+    -moz-box-shadow: 6px 2px 13px 0px rgba(0, 0, 0, 0.53);
+    box-shadow: 6px 2px 13px 0px rgba(0, 0, 0, 0.53);
+  }
 
-button {
-  position: absolute;
-  border-radius: 50%;
-  bottom: -10px;
-  right: -5px;
-  padding: 5px;
-  border: solid black 1px;
-  background-color: white;
-}
+  a {
+    background-color: white;
+    text-decoration: none;
+    color: black;
+  }
 
-button:active {
-  box-shadow: 0 3px #666;
-  transform: translateY(3px);
-}
+  button {
+    position: absolute;
+    border-radius: 50%;
+    bottom: -10px;
+    right: -5px;
+    padding: 5px;
+    border: solid black 1px;
+    background-color: white;
+  }
 
-button:hover {
-  background-color: rgba(0, 0, 0, 0.4);
-}
+  button:active {
+    box-shadow: 0 3px #666;
+    transform: translateY(3px);
+  }
 
-.fa-heart {
-  color: red;
+  button:hover {
+    background-color: rgba(0, 0, 0, 0.4);
+  }
+
+  .fa-heart {
+    color: red;
+  }
 }
