--- a/src/app/search-criteria/search-criteria.component.html
+++ b/src/app/search-criteria/search-criteria.component.html
@@ -13,7 +13,13 @@
     </select>
 
     <label for="search"> Search </label>
-    <input type="text" id="search" name="search" placeholder="Search food idea" ngModel />
+    <input
+      type="text"
+      id="search"
+      name="search"
+      placeholder="Search food idea"
+      ngModel
+    />
 
     <label for="calories"> Calories </label>
     <select name="calories" id="calories" ngModel>
@@ -25,7 +31,6 @@
       <option value="2001-3000">0-5000</option>
     </select>
     <button class="search-recipe">Submit</button>
-    <a routerLink="/favorites"> Favorites</a>
   </form>
   <app-recipe-list [recipeList]="recipes"></app-recipe-list>
   <footer>
