minor fixes patrick push

--- a/src/app/recipe-details/recipe-details.component.html
+++ b/src/app/recipe-details/recipe-details.component.html
@@ -5,7 +5,7 @@
   </div>
   <h2>Ingredients:</h2>
   <p>{{ selectedRecipe.recipe.ingredientLines }}</p>
-  <h3>Health Labels:</h3>
+  <h2>Health Restrictions:</h2>
   <p>{{ selectedRecipe.recipe.healthLabels }}</p>
 </div>
 
