--- a/src/app/search-criteria/search-criteria.component.html
+++ b/src/app/search-criteria/search-criteria.component.html
@@ -4,7 +4,7 @@
     <label for="health"> Health Restrictions </label>
     <select name="health" id="health" ngModel>
       <option value="">Choose one</option>
-      <option value="shellfish-free">Shellfish Free Diet</option>
+      <option value="sugar-conscious">Sugar Conscious Diet</option>
       <option value="tree-nut-free">Tree Nut Free Diet</option>
       <option value="alcohol-free">Alcohol Free</option>
       <option value="vegetarian">Vegetarian Diet</option>
