--- a/src/app/recipe-details/recipe-details.component.css
+++ b/src/app/recipe-details/recipe-details.component.css
@@ -1,7 +1,21 @@
 div {
   display: flex;
   flex-direction: column;
+  font-weight: bold;
+  font-size: 16px;
 }
+
+h1 {
+  text-shadow: 0px 9px 5px rgba(0, 0, 0, 1);
+  color: white
+}
+
+h2 {
+  text-shadow: 0px 9px 5px rgba(0, 0, 0, 1);
+}
+
+
+
 
 .image-container {
   width: min-content;
@@ -10,9 +24,6 @@ div {
   margin: auto;
 }
 
-p {
-  background-color: white;
-}
 
 button {
   border-radius: 10px;
@@ -22,7 +33,10 @@ button {
   color: white;
   margin: 5px;
   width: 100%;
+  box-shadow: 0px 5px 5px 2px rgba(0, 0, 0, 0.53);
 }
+
+
 
 @media only screen and (min-width: 768px) {
   button {
