--- a/src/app/search-criteria/search-criteria.component.css
+++ b/src/app/search-criteria/search-criteria.component.css
@@ -3,6 +3,7 @@ h1 {
   justify-content: center;
   font-weight: 900;
   text-shadow: 2px 20px 8px rgba(0, 0, 0, 1);
+  color: white;
 }
 
 main {
@@ -29,6 +30,8 @@ form {
 
 label {
   background-color: white;
+  font-size: x-large;
+  font-weight: bold;
 }
 
 select {
